[gd_scene load_steps=16 format=3 uid="uid://hhf5tkjirnq2"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_m7yb4"]
[ext_resource type="AudioStream" uid="uid://dehqasm1kcubf" path="res://Audio/Sfx/Enemy_death.wav" id="3_k00j0"]
[ext_resource type="Texture2D" uid="uid://chndj4y34quuv" path="res://Art/enemies/ghost.png" id="3_s2k7n"]
[ext_resource type="AudioStream" uid="uid://8oce3bcaae4c" path="res://Audio/Sfx/Enemy_hurt.wav" id="4_t714e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gk2e"]
size = Vector2(14, 27)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pm4ju"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hd5ba"]
radius = 423.001

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ioi3o"]
size = Vector2(27, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5v0l"]
atlas = ExtResource("3_s2k7n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmptl"]
atlas = ExtResource("3_s2k7n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2e0v"]
atlas = ExtResource("3_s2k7n")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ke1j"]
atlas = ExtResource("3_s2k7n")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtfmb"]
atlas = ExtResource("3_s2k7n")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcpri"]
atlas = ExtResource("3_s2k7n")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cbesx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5v0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmptl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2e0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ke1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtfmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcpri")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Enemy" type="CharacterBody2D"]
top_level = true
light_mask = 17
y_sort_enabled = true
collision_layer = 7
collision_mask = 7
script = ExtResource("1_m7yb4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-2, -1.5)
shape = SubResource("RectangleShape2D_6gk2e")

[node name="Sprite2D2" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = SubResource("CompressedTexture2D_pm4ju")

[node name="Area2D" type="Area2D" parent="."]
light_mask = 0
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_hd5ba")

[node name="HB" type="Area2D" parent="."]
light_mask = 129
visibility_layer = 129
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="HB"]
light_mask = 128
visibility_layer = 128
position = Vector2(-5.5, -1)
shape = SubResource("RectangleShape2D_ioi3o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cbesx")

[node name="Death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_k00j0")

[node name="Hit_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_t714e")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_shape_entered" from="HB" to="." method="_on_hb_area_shape_entered"]
